argo-demo/overlays/dev/kustomization.lock.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: npe-acme-clusterissuer
    cert-manager.io/issuer-kind: ClusterIssuer
  labels:
    env: dev
  name: dev-demo-ingress
  namespace: dev-flink-demo
spec:
  ingressClassName: nginx
  rules:
  - host: ds01-flink.venetianqa.local
    http:
      paths:
      - backend:
          service:
            name: dev-demo-flinkdeployment-rest
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ds01-flink.venetianqa.local
    secretName: dev-demo-ingress-tls
